--- a/solarize/package.json
+++ b/solarize/package.json
@@ -16,6 +16,7 @@
     "react-dom": "19.0.0-rc-66855b96-20241106"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.2.0",
     "eslint": "^8",
     "eslint-config-next": "15.0.3"
   }
