--- a/solarize/package.json
+++ b/solarize/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.1",
     "next": "15.0.3",
@@ -19,5 +20,6 @@
     "@faker-js/faker": "^9.2.0",
     "eslint": "^8",
     "eslint-config-next": "15.0.3"
-  }
+  },
+  "type": "module"
 }
