--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.4.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.46.1",
     "bootstrap": "^5.3.3",
@@ -19,7 +20,8 @@
     "react": "^18.3.0",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.0",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.2.0",
